  * Rewrite mksplit in C, and merge it into dpkg-split.
  * Rewrite dpkg-divert in C.
  * Use linux-any wildcard for libselinux1-dev Build-Depends instead of
    using a list of negated architectures.
  * Use Breaks instead of Conflicts in dpkg, dpkg-dev and libdpkg-perl binary
    packages.
  * Move Dpkg.pm and Dpkg/Gettext.pm from dpkg to libdpkg-perl.
  * Bump Standards-Version to 3.9.0.

  [ Updated programs translations ]
  * Catalan (Guillem Jover).
  * German (Sven Joachim).
  * Russian (Yuri Kozlov). Closes: #579149
  * Swedish (Peter Krefting).

  [ Updated man page translations ]
  * German (Helge Kreutzmann).
  * Russian (Yuri Kozlov). Closes: #579149
  * Spanish (Omar Campagne).
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * French (Christian Perrier).
  * German (Helge Kreutzmann). Improved by Holger Wansing.
  * Russian (Yuri Kozlov). Closes: #579149
  * Swedish (Peter Krefting).

 -- Guillem Jover <guillem@debian.org>  Wed, 21 Apr 2010 04:40:12 +0200

dpkg (1.15.7.2) unstable; urgency=low

  [ Raphaël Hertzog ]
  * Update dpkg-buildflags to respect $XDG_CONFIG_HOME and to use
    $XDG_CONFIG_HOME/dpkg/buildflags.conf by default.
  * Update deb-substvars(5) to codify how variables containing multiple
    lines must be managed.
  * Fix boolean evaluation of Dpkg::Version so that version 0 evaluates to
    false and dpkg-shlibdeps can strip the minimal version specification.
    Closes: #579724
    Document this behaviour in the API and add non-regression test to ensure
    it's kept.
  * Let dpkg-buildflags error out when a required parameter is missing.
    Closes: #579722
  * Add Bug-Ubuntu field in DEP-3 template provided in the automatic header
    of patches in 3.0 (quilt) source packages. Thanks to Benjamin Drung
    <bdrung@ubuntu.com> for the patch. Closes: #578002
  * Update deb-override(5) by removing references to usage of sections
    to place the packages on the mirrors and by indicating that the Debian