@@ -68,6 +68,9 @@ dpkg (1.15.8) UNRELEASED; urgency=low
     packages.
   * Move Dpkg.pm and Dpkg/Gettext.pm from dpkg to libdpkg-perl.
   * Bump Standards-Version to 3.9.0.
+  * Detect when another process has locked the database, and mention that
+    problematic dpkg --audit results might be due to ongoing operations.
+    Closes: #80252
 
   [ Updated programs translations ]
   * Catalan (Guillem Jover).
